# dylogy-mcp

./: Makefile  README.md  actuarial_search.py  custom_tools.py  dylogy.py  graph_viewer.py  mars2009_graph_data.json  mars2009_graph_report.md  pdf_report.py  pyproject.toml  rich_report.py  tool_definitions.py
tools/: __init__.py  _graph_helpers.py  compare_document_graphs.py  create_pdf_report.py  create_rich_pdf_report.py  export_environment_report.py  graph_stats.py  graph_to_mermaid.py  search_actuarial_library.py  view_document_graph.py
