[project]
name = "dylogy-mcp"
version = "0.1.0"
description = "MCP server that auto-generates tools from the Dylogy OpenAPI spec"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "latex2mathml>=3.78.1",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.26.0",
    "weasyprint>=68.1",
]
